errors/2025-02-20T20-44-29.576Z.txt
SyntaxError: Unexpected token 'async'
C:\Users\yacin\Desktop\yassmine\src\commands\Community\ping.js:34
    async execute(interaction, client) {
    ^^^^^

SyntaxError: Unexpected token 'async'
    at wrapSafe (node:internal/modules/cjs/loader:1515:18)
    at Module._compile (node:internal/modules/cjs/loader:1537:20)
    at Object..js (node:internal/modules/cjs/loader:1708:10)
    at Module.load (node:internal/modules/cjs/loader:1318:32)
    at Function._load (node:internal/modules/cjs/loader:1128:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:219:24)
    at Module.require (node:internal/modules/cjs/loader:1340:12)
    at require (node:internal/modules/helpers:138:16)
    at loadCommand (C:\Users\yacin\Desktop\yassmine\src\functions\handlers\handleCommands.js:77:25)